fix navbar on mobile

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -12,7 +12,7 @@
 @media (max-width: 576px) {
   .navbar-nav {
     width: 100vw;
-    margin-inline: calc(-1 * var(--bs-gutter-x, 0.75rem));
+    margin-inline: calc(-0.5 * var(--bs-gutter-x));
     margin-bottom: -0.5rem;
     padding-block: 0.5rem;
     box-sizing: content-box;
@@ -20,7 +20,7 @@
   .navbar-nav .nav-link {
     width: 100%;
     text-align: left;
-    padding-inline: var(--bs-gutter-x, 0.75rem);
+    padding-inline: calc(0.5 * var(--bs-gutter-x));
   }
   .dropdown-menu-brown {
     background: rgba(0, 0, 0, 0.25);
